(fix) align info card

--- a/src/Components/Card/Card.css
+++ b/src/Components/Card/Card.css
@@ -5,4 +5,5 @@
     overflow: hidden;
     background: #f4f4f8;
     min-width: 300px;
+    align-items: center;
 }
